Primary code for FINAL

--- a/Updated_Model_(4_23_21) (2).ipynb
+++ b/Updated_Model_(4_23_21) (2).ipynb
@@ -324,7 +324,7 @@
         "\n",
         "            mosquito_num (int) Number of initial mosquitoes in the simulation\n",
         "\n",
-        "            inc_rate (float) Made up value demonstrating the growth rate of the mosquito (roughly)\n",
+        "            inc_rate (float) A made up value demonstrating the growth rate of the mosquito (roughly)\n",
         "\n",
         "            kill_rate (float) Approximate kill rate from the norm by humans nearby\n",
         "\n",
